--- a/src/app.html
+++ b/src/app.html
@@ -3,6 +3,11 @@
 	<head>
 		<meta charset="utf-8" />
 		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
+		<link rel="preconnect" href="https://fonts.googleapis.com">
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+		<link
+			href="https://fonts.googleapis.com/css2?family=League+Gothic&family=Raleway:wght@200;300;400;500;600;700&display=swap"
+			rel="stylesheet">
 		<meta name="viewport" content="width=device-width" />
 		%sveltekit.head%
 	</head>
